static/css/style.css
body {
    background-color: #FFFAF0; /*Seashell*/
}

h1 {
    font-family: Molle;
}
.navbar {
    background-color: #2A1911; /*Same brown as image in masthead*/
    /* background-color: #FFFAF0; */
}
.navbar-dark .navbar-brand {
    color: #fff;
    font-family: Molle;
    font-size: 2.5em;
}

/*Page Corner Fold Effect*/
.page-effect {
    position: relative;
    width: 100%;
    padding: .5em 1em;
    margin: 1em auto;
    color: #000000; 
    background-color: #FAEBD7; /*Antique White (Darker than Seashell)*/
    overflow: hidden;
}

.page-effect:before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    border-width: 0 12px 12px 0;
    border-style: solid;
    border-color: #fff #fff #FAEBD7 #FAEBD8;
    background: #FAEBD7;
    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
    box-shadow: 0 1px 1px rgba(0,0,0,0.3), -1px 1px 1px rgba(0,0,0,0.2);
    /* For Firefox*/
    display: block; width: 0;
}

/*Icons Styling*/
.fa {
    font-size: 1.3em;
}

.fa label {
    font-family: Molle;
}

.whatsapp {
    color: #075e54;
    font-size: 2em;
}
.whatsapp-link {
    text-decoration: none;
    color: #075e54;
}

/*Button Styling*/
.btn-small-b {
    line-height: 24px;
    margin: 5px 5px;
    padding: 0 0.5;
    background-color: blue;
    color: white !important;
}

.btn-small-r {
    line-height: 24px;
    margin: 5px 5px;
    padding: 0 0.5;
    background-color: red !important;
    color: white !important;
}

.btn-link {
    color: #2A1911;
}

.add-another{
    font-size: 14px;
}

.delete-ingredient{
    font-size: 14px;
}

/*Switch Styling*/
 .switch {
     padding: 5px;
     margin: 5px;
     margin-top: 25px;
 }

.dietary-info {
    margin-left: 3em;
}



/*Recipe Card Styling*/
.card img {
    height: 300px;
}

.card {
    margin-left: 5px;
    margin-right: 5px;
}

.recipe-container {
    margin-left: 5px;
    margin-right: 5px;
}

.card-header {
    font-family: Molle;
}

/*Masthead Styling*/

.homepage-header {
    font-family: 'Molle', cursive;
    align-items: center;
    padding-left: auto;
    padding-right: auto;
}

.masthead-image {
    background-image: url('../img/chocolate-homepage.jpg') !important; 
    background-repeat: no-repeat;
    background-size: auto;
    background-color: transparent;
    height: 95vh;
    width: 100vw;
}
.jumbotron {
    background-color: transparent !important;
    color: #FAEBD8 !important;
}

.full-width {
    width: 100vw;
}

/*Media Queries*/
/* Large desktop */

@media (min-width: 1200px) {

    
}


/* Portrait tablet to landscape and desktop */

@media (min-width: 768px) and (max-width: 1199px) {
    

}


/* Landscape phone to portrait tablet */

@media (max-width: 767px) {
    
}

/* Landscape phones and down */

@media (max-width: 480px) {
    masthead-image {
    background-image: url('../img/chocolate-homepage-phone.jpg') !important;   
    }

    .fa {
    font-size: 1em;
    }

    .fa label {
    font-family: Molle;
    font-size: 1em;
    }
}


/* Smaller Phones */

@media (min-width: 250px) and (max-width: 321px) {


    

}

